--- a/app/src/main/res/layout/activity_manage_product_.xml
+++ b/app/src/main/res/layout/activity_manage_product_.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.danielacedo.manageproductrecycler.ManageProduct_Activity">
+    tools:context="com.danielacedo.manageproductrecycler.ManageProductFragment">
 
     <EditText
         android:layout_width="match_parent"
