--- a/app/src/main/res/menu/ctx_menu_product.xml
+++ b/app/src/main/res/menu/ctx_menu_product.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/ctx_menu_product_delete" android:title="@string/ctx_menu_product_delete"></item>
+    <item android:id="@+id/ctx_menu_product_delete"
+        android:title="@string/ctx_menu_product_delete"
+        android:icon="@android:drawable/ic_menu_delete"></item>
 </menu>
