--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,13 +6,22 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="android:actionModeBackground">@color/background_action_mode</item>
+        <item name="actionModeBackground">@color/background_action_mode</item>
     </style>
+
     <style name="error" parent="TextAppearance.AppCompat.Caption">
         <item name="android:textColor">@color/colorError</item>
     </style>
 
     <style name="hint" parent="TextAppearance.Design.Hint">
         <item name="android:textColor">@color/colorHint</item>
+    </style>
+
+    <style name="Widget.ActionMode" parent="Widget.AppCompat.ActionMode">
+        <item name="background">@color/background_action_mode</item>
+        <item name="android:background">@color/background_action_mode</item>
     </style>
 
 </resources>
