--- a/app/src/main/res/layout/layout_headernavview.xml
+++ b/app/src/main/res/layout/layout_headernavview.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:background="@drawable/profilebackground"
     android:layout_height="@dimen/header_height"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
+    android:gravity="bottom"
     android:padding="@dimen/header_left_padding">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -26,6 +28,7 @@
         android:layout_height="wrap_content"
         style="@style/Base.Widget.AppCompat.Spinner"
         android:text="dani_acedo@hotmail.com"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"/>
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
+        android:id="@+id/txv_ProfileEmail"/>
 
 </LinearLayout>
