--- a/app/src/main/res/layout/item_pharmacy.xml
+++ b/app/src/main/res/layout/item_pharmacy.xml
@@ -11,4 +11,22 @@
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         android:id="@+id/txv_pharmacy_cif"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:id="@+id/txv_pharmacy_address"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:id="@+id/txv_pharmacy_phone"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:id="@+id/txv_pharmacy_email"/>
+
 </LinearLayout>
