Added multidelete product implementing database

--- a/app/src/main/res/values/errors.xml
+++ b/app/src/main/res/values/errors.xml
@@ -28,4 +28,7 @@
     <string name="err_pharmacyPhone_empty">Debe introducir un teléfono</string>
     <string name="err_pharmacyEmail_empty">Debe introducir un email</string>
 
+    <!-- Product -->
+    <string name="err_product_remove_error">Error al borrar los productos</string>
+
 </resources>
